Adding GetVenues endpoint
